<resources>
    <string name="app_name" translatable="false">Vigilante</string>
    <string name="vigilante_description">Vigilante service</string>
    <string name="vigilante_summary">Vigilante service listener for events that displays dot when camera/mic usage happens.</string>
    <string name="home">Home</string>
    <string name="disable_the_service">Disable the service manually</string>
    <string name="enable_the_service">Please enable the service</string>
    <string name="disable_text">Disable</string>
    <string name="enable_text">Enable</string>
    <string name="disk_not_encrypted">Disk not encrypted</string>
    <string name="disk_encrypted">Disk encrypted</string>
    <string name="permissions_history">Permissions history</string>
    <string name="headset_history">Headset history</string>
    <string name="notifications_history">Notifications history</string>
    <string name="lock_screen_history">Lock screen history</string>
    <string name="notifications_usage_expl">By enabling this option, you\'ll be receiving notifications when camera/microphone/etc.. is used, if/when possible.</string>
    <string name="notifications_usage_expl_camera">By enabling this option, you\'ll be receiving notifications when camera is used, if/when possible.</string>
    <string name="notifications_usage_expl_mic">By enabling this option, you\'ll be receiving notifications when microphone is used, if/when possible.</string>
    <string name="notifications_usage_expl_location">By enabling this option, you\'ll be receiving notifications when location is enabled, if/when possible.</string>
    <string name="notifications_usage_title">Enable usage notifications</string>
    <string name="crash_report">Crash report #%1$d</string>
    <string name="no_crashes">There are no crashes recorded!</string>
    <string name="version">Version</string>
    <string name="date_format">Date format</string>
    <string name="current_date_format">Current date format: %1$s</string>
    <string name="no_results_expl">There are no results chief, try coming back later, we\'ll keep on looking!</string>
    <string name="screen_unlocked">Screen unlocked</string>
    <string name="screen_locked">Screen locked</string>
    <string name="total">Total</string>
    <string name="locks">Locks</string>
    <string name="unlocks">Unlocks</string>
    <string name="content_description_lock_screen_filter">Lock screen filter</string>
    <string name="locks_and_unlocks">Locks and unlocks</string>
    <string name="locks_only">Locks only</string>
    <string name="unlocks_only">Unlocks only</string>
    <string name="disconnected">Disconnected</string>
    <string name="connected">Connected</string>
    <string name="connected_with_mic">Connected with mic</string>
    <string name="not_available">N/A</string>
    <string name="headset_connection_type_title">Headset %1$s</string>
    <string name="allowed">Allowed</string>
    <string name="allowed_foreground_only">Allowed foreground only</string>
    <string name="always_allowed">Allowed always</string>
    <string name="allowed_one_time">Allowed one time only</string>
    <string name="denied">Denied</string>
    <string name="denied_and_do_not_ask_again">"Denied with do not ask again "</string>
    <string name="ask_every_time">Ask every time</string>
    <string name="permissions_requests_by_app_count">%1$d permission requests in total.</string>
    <string name="total_permission_requests">Total permission requests</string>
    <string name="title_placeholder">Title: %1$s</string>
    <string name="big_text_placeholder">Big text: %1$s</string>
    <string name="text_placeholder">Text: %1$s</string>
    <string name="category_placeholder">Category: %1$s</string>
    <string name="group_placeholder">Group: %1$s</string>
    <string name="channel_id_placeholder">Channel id: %1$s</string>
    <string name="notification_visibility_public">Publicly visible notification</string>
    <string name="notification_visibility_private">Privately visible notification</string>
    <string name="notification_visibility_secret">Secretly visible notification</string>
    <string name="notification_visibility_placeholder">Visibility: %1$s</string>
    <string name="notification_color_placeholder">Notification color: %1$s</string>
    <string name="notification_color_copied_to_clipboard">Notification color copied to clipboard!</string>
    <string name="date_placeholder">Date: %1$s</string>
    <string name="power_history">Power history</string>
    <string name="power_disconnected">Power disconnected</string>
    <string name="power_connected">Power connected</string>
    <string name="ac_charging">AC charging</string>
    <string name="usb_charging">USB charging</string>
    <string name="wireless_charging">Wireless charging</string>
    <string name="error_occurred">Error occurred, try again later!</string>
    <string name="channel_name">Vigilante usage notifications</string>
    <string name="channel_description">Notifications are sent when privacy usage happens</string>
    <string name="mic_being_used">Your microphone is being used!</string>
    <string name="location_being_used">Your location is enabled, could be that it\'s being used!</string>
    <string name="cam_being_used">Your camera is being used!</string>
    <string name="usage_title">Usage detected</string>
    <string name="dot_usage_title">Show dot usage</string>
    <string name="dot_usage_expl">By enabling this option, you\'ll see a dot appear on your screen when usage happens.</string>
    <string name="exclude_from_notifications_title">Exclude Vigilante from notifications</string>
    <string name="exclude_from_notifications_expl">By enabling this option, you\'ll not be seeing this application\'s notifications into the history</string>
    <string name="enable_dot_customization">Enable show dot usage first!</string>
    <string name="microphone_title">Microphone</string>
    <string name="camera_title">Camera</string>
    <string name="size_title">Size</string>
    <string name="pick_color">Pick color</string>
    <string name="select">Select</string>
    <string name="pick_dot_color">Pick dot color</string>
    <string name="dot_mic">Dot microphone</string>
    <string name="dot_camera">Dot camera</string>
    <string name="dot_indicator">Dot indicator</string>
    <string name="top_right_corner">Top right corner</string>
    <string name="top_left_corner">Top left corner</string>
    <string name="center_right_side">Center right side</string>
    <string name="center_left_side">Center left side</string>
    <string name="bottom_right_corner">Bottom right corner</string>
    <string name="bottom_left_corner">Bottom left corner</string>
    <string name="top_center_horizontal">Center top</string>
    <string name="bottom_center_horizontal">Center bottom</string>
    <string name="dot_position">Dot position on screen</string>
    <string name="cancel">Cancel</string>
    <string name="discard_changes">Discard</string>
    <string name="save">Save</string>
    <string name="save_progress_expl">Discard or save your current changes?</string>
    <string name="customize_cam_or_mic">Customize camera or microphone parameters?</string>
    <string name="saved">Saved!</string>
    <string name="disk_status">Disk status</string>
    <string name="crash_copied_to_clipboard">Crash details copied to clipboard!</string>
    <string name="content_copied_to_clipboard">Copied to clipboard!</string>
    <string name="web_browser_required">Web browser required for this action!</string>
    <string name="informational">Informational</string>
    <string name="customizations">Customizations</string>
    <string name="home_page">Home page</string>
    <string name="license" translatable="false">GPL 3.0</string>
    <string name="license_title">License</string>
    <string name="root_status">Root status</string>
    <string name="device_not_rooted">Device not rooted</string>
    <string name="device_rooted">Device rooted</string>
    <string name="magisk_status">Magisk status</string>
    <string name="magisk_not_detected">Magisk not present</string>
    <string name="magisk_detected">Magisk detected</string>
    <string name="next">Next</string>
    <string name="welcome_to_vigilante_you_have_chosen_privacy_thank_you_for_your_decision">Welcome to Vigilante, you have chosen privacy, thank you for your decision!</string>
    <string name="you_can_choose_the_size_color_and_the_position_of_the_dots_appearing_on_the_screen">You can choose the size, color and the position of the dots appearing on the screen</string>
    <string name="and_many_other_customizations_and_options_available_within_the_simple_ui_in_the_application">and many other customizations and options available within the simple UI in the application.</string>
    <string name="finish">Finish</string>
    <string name="final_expl">Don\'t forget to report the crashes, suggest new features and keep in mind that if some service is offered to you for free where they show ads or it simply is connected on the internet without stating their goal, then you (as a user) are the product!</string>
    <string name="final_pre_expl">This app uses encrypted preference choices, database and focuses on privacy and productivity</string>
    <string name="the_app_is_an_open_source_project_and_will_remain_as_such_as_it_focuses_on_privacy_and_it_s_integrity">The app is an open source project and will remain as such as it focuses on privacy and its integrity.</string>
    <string name="device_info">Device info</string>
    <string name="security">Security</string>
    <string name="biometric_auth_expl">Require biometric authentication every time you open the app</string>
    <string name="biometric_auth_title">Biometric auth on start</string>
    <string name="unsupported_device">Your device doesn\'t support biometric auth.</string>
    <string name="verification_required">Verification required</string>
    <string name="prompt_info_expl">Please verify your identity to enable authentication on start</string>
    <string name="auth_failed">Authentication failed, try again!</string>
    <string name="verify_to_proceed">Verify your identity to open the application.</string>
    <string name="language_title">Language</string>
    <string name="notification_led_color">Notification led color</string>
    <string name="pick_notification_LED_color">Pick notification LED color</string>
    <string name="bypass_dnd_title">Bypass Do not disturb</string>
    <string name="bypass_dnd_expl">By enabling this option, you\'ll bypass Do not disturb mode and receive notifications about usage, use with caution!</string>
    <string name="notifications">Notifications</string>
    <string name="dot_indicator_customizations">Dot indicator customizations.</string>
    <string name="generate">Generate</string>
    <string name="generate_one_time_password">Generate one time password</string>
    <string name="password_length">Password length</string>
    <string name="password_length_expl">The recommended password length should be more or equals to 8 characters</string>
    <string name="shuffle_characters">Shuffle characters</string>
    <string name="sound_pref_title">Notification sound</string>
    <string name="sound_pref_summary">By enabling this option, you\'ll be receiving notification sounds when usage happens.</string>
    <string name="log_permissions_title">Log permissions</string>
    <string name="log_power_title">Log power</string>
    <string name="log_headset_title">Log headset</string>
    <string name="log_notifications_title">Log notifications</string>
    <string name="log_lockscreen_title">Log lockscreen</string>
    <string name="log_empty_notifications">Log empty notifications</string>
    <string name="log_empty_notifications_summary">Some notifications have empty body, you can disable logging them, logging is enabled by default.</string>
</resources>