<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/customizations">

        <ListPreference
            app:iconSpaceReserved="false"
            app:key="pref_language"
            app:defaultValue="en"
            app:entries="@array/language_entries"
            app:entryValues="@array/language_values"
            app:title="@string/language_title" />

        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            app:key="pref_notifications"
            app:summary="@string/notifications_usage_expl"
            app:title="@string/notifications_usage_title" />

        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            app:key="pref_dot"
            app:defaultValue="true"
            app:summary="@string/dot_usage_expl"
            app:title="@string/dot_usage_title" />

        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            app:key="pref_exclude_vigilante_from_notifications"
            app:summary="@string/exclude_from_notifications_expl"
            app:title="@string/exclude_from_notifications_title" />

        <ListPreference
            app:defaultValue="dd.MM.yyyy HH:mm:ss"
            app:entries="@array/date_formats"
            app:entryValues="@array/date_formats"
            app:iconSpaceReserved="false"
            app:key="pref_date"
            app:title="@string/date_format" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/security">

        <SwitchPreferenceCompat
            app:key="pref_biometric_auth"
            app:title="@string/biometric_auth_title"
            app:summary="@string/biometric_auth_expl"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/informational">

        <Preference
            app:iconSpaceReserved="false"
            app:key="pref_license"
            app:title="@string/license_title"
            app:summary="@string/license" />

        <Preference
            app:iconSpaceReserved="false"
            app:key="pref_version"
            app:title="@string/version" />

        <Preference
            app:iconSpaceReserved="false"
            app:key="pref_home_page"
            app:title="@string/home_page" />

    </PreferenceCategory>


</PreferenceScreen>